# ImarisWriter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
c/: bpImageConverterC.cxx
cmake/: FindLZ4.cmake
doc/MinimalImarisImageFile/: Minimal_IMS_File.ims
interface/: ImarisWriterDllAPI.h  bpConverterTypes.h  bpImageConverter.h  bpImageConverterInterface.h
interfaceC/: bpConverterTypesC.h  bpImageConverterInterfaceC.h
project/qt/: ImarisWriter.pri  ImarisWriter.pro  ImarisWriter_lib.pro  ImarisWriter_staticlib.pro
python/: Makefile  README.md  setup.cfg
python/PyImarisWriter/: ImarisWriterCtypes.py  PyImarisWriter.py  __init__.py
writer/: bpCircularBuffer.h  bpCompressionAlgorithm.h  bpCompressionAlgorithmFactory.cxx  bpCompressionAlgorithmFactory.h  bpDeriche.cxx  bpDeriche.h  bpGzip.cxx  bpGzip.h  bpH5LZ4.cxx  bpH5LZ4.h  bpHistogram.cxx  bpHistogram.h  bpImageConverter.cxx  bpImageConverterImpl.cxx  bpImageConverterImpl.h  bpImsImage3D.cxx  bpImsImage3D.h  bpImsImage5D.cxx  bpImsImage5D.h  bpImsImageBlock.cxx  bpImsImageBlock.h  bpImsLayout.cxx  bpImsLayout.h  bpImsLayout3D.cxx  bpImsLayout3D.h  bpImsUtils.cxx  bpImsUtils.h  bpLZ4.cxx  bpLZ4.h  bpMemoryBlock.h  bpMemoryManager.cxx  bpMemoryManager.h  bpMultiresolutionImsImage.cxx  bpMultiresolutionImsImage.h  bpOptimalBlockLayout.cxx  bpOptimalBlockLayout.h  bpShuffle.cxx  bpShuffle.h  bpThreadPool.cxx  bpThreadPool.h  (+16 more)
