[metadata]
name = PyImarisWriter-IMARIS
version = 0.7
author = Imaris
author_email = sacha@bitplane.com
description = Python wrapper for ImarisWriter library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/imaris
license = Apache License, Version 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows

[options]
packages = PyImarisWriter
python_requires = >=3.6

[options.package_data]
* = *.dll